name:                FailT
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/FailT#readme>
homepage:            https://github.com/lehins/FailT
license:              BSD3
license-file:         LICENSE
author:               Alexey Kuleshevich
maintainer:           alexey@kuleshevi.ch
copyright:            2022-2023 Alexey Kuleshevich
category:             Algorithms
build-type:           Simple
extra-source-files:   README.md
                    , CHANGELOG.md
cabal-version:        1.18
tested-with:          GHC == 8.0.2
                    , GHC == 8.2.2
                    , GHC == 8.4.4
                    , GHC == 8.6.5
                    , GHC == 8.8.4
                    , GHC == 8.10.7
                    , GHC == 9.0.2
                    , GHC == 9.2.5
                    , GHC == 9.4.4

library
  hs-source-dirs:     src
  exposed-modules:    Control.Monad.Trans.Fail
                    , Control.Monad.Trans.Fail.String
                    , Control.Monad.Trans.Fail.Text

  build-depends:      base >= 4.8 && < 5
                    , exceptions
                    , mtl
                    , text

  default-language:   Haskell2010
  ghc-options:        -Wall


test-suite doctests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            doctests.hs
  build-depends:      base
                    , doctest >= 0.15
                    , FailT
  default-language:   Haskell2010
  ghc-options:       -Wall
                     -fno-warn-orphans
                     -threaded

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Test.Control.Monad.Trans.FailSpec
                    , Spec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , FailT
                    , hspec
                    , mtl
                    , QuickCheck
                    , quickcheck-classes

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/FailT
